# sendero

./: .env.example  .gitignore  .gitignore.local  .impeccable.md  .mcp.json  .mise.toml  .vercelignore  BUILD_VERTICAL_AI_AGENT.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NEXT_PLAN_PROMPT.md  POST_HACKATHON_TODO.md  README.md  ROADMAP.md  SUBMISSION.md  TODO.md  TODO_TOOLS.md  TOKEN.md  biome.json  derive.sh  lefthook.yml  lessons.md  next.config.mjs  ngrok-sendero.yml  package.json  skills-lock.json  tsconfig.json  turbo.json  vercel.json  wrangler.toml
.context/: codex-session-id
.github/: pull_request_template.md
.kapso/: remote-map.json
.qa-phase-b/: dogfood-results-2.json  dogfood-results-3.json  dogfood-results.json  dogfood-test-prompts.md  report.md  run-dogfood-2.ts  run-dogfood-3.ts  run-dogfood.ts
app/: globals.css  layout.tsx  page.tsx
components/: actions.ts  agent-card.tsx  agent-chip.tsx  bridge-dialog.tsx  chat-col.tsx  deposit-dialog.tsx  dialog-shell.tsx  fund-card.tsx  globe.tsx  hero.tsx  pasillo-app.tsx  profile-gate.tsx  send-dialog.tsx  sendero-app.tsx  settle-panel.tsx  stage.tsx  store.ts  swap-dialog.tsx  ui.tsx  use-meter.ts  wallet-dropdown.tsx  workflow-log.tsx
contracts/: .gitignore  README.md  foundry.toml
contracts/programs-solana/programs/agentic-commerce/: Cargo.toml
contracts/programs-solana/programs/agentic-commerce/src/: lib.rs
contracts/programs-solana/programs/sendero-guest-escrow/: Cargo.toml
contracts/programs-solana/programs/sendero-guest-escrow/src/: lib.rs
docs/: GCP_DEPLOY.md  PHASE_3_AVAX_RUNBOOK.md  PHASE_4_SOLANA_RUNBOOK.md  PHASE_5_PRODUCTION_HARDENING_RUNBOOK.md  PRISMA_ACCELERATE_PULSE_SETUP.md  TECH_DEBT_AUDIT.md  TEST_FIRST_MESSAGE.md  TRIP_COMPANION_SPEC.md  clerk-setup.md  demo-3min-script.md  duffel-split-ticket-integration.md  faye-partnership-email.md  gateway-v5-interim.md  local-dev-ports.md  pasillo-auth-coordination.md  phase-b-conversation-plan.md  phase-c-notifications-plan.md  sherpa-partnership-email.md  slack-install-url-test.md  slack.md  vertical-ai-travel-ops-prompts.md  webhooks.md  whatsapp-e2e-phases.md  whatsapp-tenant-routing-spec.md
lib/: appkit.ts  arc-identity.ts  arc-jobs.ts  arc.ts  bridge-chains.ts  circle.ts  duffel.ts  env.ts  erc8183-client.ts  gateway.ts  mcp-app.ts  nanopayments.ts  user-wallet.ts
memory/: retro-2026-04-21.json
pitch/: deck-stage.js  index.html  notes.html  package.json  serve.ts  vercel.json
public/: agent-metadata.json  llms.txt
scripts/: _debug-arc-addowners.ts  _debug-arc-execute.ts  _debug-arc-ownership.ts  _smoke-aesthetic.ts  _smoke-all-13-buckets.ts  _smoke-batch2.ts  _smoke-batch3.ts  _smoke-batch4.ts  _smoke-beauty-budget.ts  _smoke-budget.ts  _smoke-concierge.ts  _smoke-date-planner.ts  _smoke-disruption-recovery.ts  (+66 more)
(+1455 files in other folders)
