[package]
name = "sendero-guest-escrow"
version = "0.1.0"
description = "Solana port of SenderoGuestEscrow.sol — pre-funded guest-link travel escrow"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "sendero_guest_escrow"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
